--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-assn1.zip contains the skeleton file assn1.go 
+This repository contains files related to CS628A Assignment-1.
 
+assn1.zip contains the skeleton file assn1.go 
 All your code will go into this file
 
 Add extra tests into assn1_test.go to test the functionality 
